관리자 중고거래게시판 기능 구현
중고거래게시판 글 조회 및 삭제, 댓글 삭제 기능 구현

--- a/WebContent/css/fleamarket.css
+++ b/WebContent/css/fleamarket.css
@@ -276,3 +276,25 @@
 .fleamarket .tbl-delete tr:hover {
     background-color: transparent;
 }
+
+/* 조아라 =========================================================================== */
+
+/* 관리자 상세조회 */
+
+table #admindetailtbl th{
+	text-align:center;
+}
+
+#cmttbl td {
+	text-align:left;
+}
+
+#cmttbl td:nth-child(1) {
+	width:20%;
+}
+
+#btn {
+    width:100%;
+    text-align:center;
+    margin:20px;
+}
