--- a/WebContent/css/statistics.css
+++ b/WebContent/css/statistics.css
@@ -8,6 +8,7 @@
 
 #chart1 {
     height: 400px;
+    width: 500px;
 }
 
 .highcharts-data-table table {
@@ -36,4 +37,8 @@
 }
 .highcharts-data-table tr:hover {
     background: #f1f7ff;
+}
+
+th {
+	text-align: center;
 }
