--- a/WebContent/css/ebooklist.css
+++ b/WebContent/css/ebooklist.css
@@ -1,19 +1,15 @@
 /* booklist.jsp > css */
 
+.contentsection { max-width: 74%; }
+
 /* 이미지 셀 */
-table td:nth-child(1) {
-	width: 130px;
-}
+table td:nth-child(1) { width: 130px; }
 
 /* 텍스트 셀 */
-table td:nth-child(2) {
-	width: 500px;
-}
+table td:nth-child(2) { width: 500px; }
 
 /* 텍스트 margin */
-table td:nth-child(2) div {
-	margin: 5px 15px;
-}
+table td:nth-child(2) div { margin: 5px 15px; }
 
 /* 수량 및 버튼 셀 */
 table td:nth-child(3) {
@@ -22,14 +18,10 @@ table td:nth-child(3) {
 }
 
 /* 이미지 */
-table td .image {
-	width: 130px;
-}
+table td .image { width: 130px; }
 
 /* 텍스트 > 제목 */
-table td .title {
-	font-size: 2em;
-}
+table td .title { font-size: 2em; }
 
 /* 도서 소개 */
 table td .intro {
@@ -38,9 +30,7 @@ table td .intro {
 }
 
 /* 텍스트 > 정가 + 가격 */
-table td .priceinfo .price {
-	font-size: 0.9em;
-}
+table td .priceinfo .price { font-size: 0.9em; }
 
 /* 텍스트 > 판매가 */
 table td .priceinfo .saleprice {
@@ -55,9 +45,7 @@ table td .priceinfo .saleprice strong {
 }
 
 /* 버튼 > div */
-table td .btns {
-	margin-top: 100px;
-}
+table td .btns { margin-top: 100px; }
 
 /* 버튼 */
 table td .btns button {
