close issue #100 메인페이지 Slick 작동 안하는 문제 해결
메인페이지 Slick(도서 슬라이드 메뉴) 작동 안하는 문제 해결

--- a/WebContent/css/firstpage.css
+++ b/WebContent/css/firstpage.css
@@ -69,11 +69,11 @@
 }
 
 .slick-dots li button:before {
-    color:#F4A259;
+    color:#F4A259 !important;
 }
 
-.slick-dots li.slick-active button:before {
-    color:#BC4B51;
+.slick-dots li.slick-active {
+    color:#BC4B51 !important;
 }
 
 
