1. sql추가, 2. 관리자)회원관리,휴면관리 추가 3.인증번호 인증 오류 해결
1. jinyeong.sql 추가
2. 관리자)회원관리,휴면관리 추가
 - CustAdd.java, DormancyMng.java, DormancyChageLangSel.java 추가
 - DormancyAdd.java, CustchageLansel.java, CustDel.java, CustSearch.java 추가
 - custview.jsp 추가
3.인증번호 인증 오류 해결
 - 메인인증 인증번호 일치,불일치 오류 해결

--- a/WebContent/css/custmng.css
+++ b/WebContent/css/custmng.css
@@ -1,5 +1,9 @@
 @charset "UTF-8";
 
+b:hover{
+	color: #F4A259;
+}
+
 /*tbl1 css*/
 #tbl1 th{
 	background-color:  #8CB369;
@@ -15,7 +19,7 @@
 }
 
 #tbl1 tr:nth-child(3) input[type="date"]{
-	width: 110px;
+	width: 130px;
 	display: inline;
 }
 
@@ -28,11 +32,13 @@
 /*리스트 개수 select*/
 #selbox2{
 	margin-left: 800px;
+	margin-bottom: 20px;
 }
 
 /*tbl2 css*/
 #tbl2 th{
 	text-align: center;
+	background-color: #E8F0E1;
 }
 
 #tbl2 td:nth-child(10){
