--- a/WebContent/css/bestseller.css
+++ b/WebContent/css/bestseller.css
@@ -38,6 +38,8 @@
 	border: 1px solid #E5E5E5;
 	width: 900px;
 	height: 300px;
+	border-collapse: collapse;
+	background-color: #FAFAFA;
 }
 
 .bookbox2, .bookbox3, .bookbox4 {
@@ -46,6 +48,8 @@
 	height: 520px;
 	text-align: center;
 	float: left;
+	border-collapse: collapse;
+	background-color: #FAFAFA;
 }
 
 
@@ -55,12 +59,15 @@
 	border: 1px solid #E5E5E5;
 	width: 900px;
 	height: 220px;
+	border-collapse: collapse;
+	background-color: #FAFAFA;
+	
 }
 
 .bookbox img {
 	float: left;
-	margin-left: 15px;
-	margin-right: 15px;
+	margin-left: 70px;
+	margin-right: 30px;
 	width:148px;
 	height:217px;
 }
@@ -81,6 +88,7 @@
 	height: 160px;
 	float: left;
 	margin: 10px;
+	margin-left: 70px;
 }
 
 .bookname {
