관리자 로그인 추가
 - LoginOK.java 추가
 - admin_bg.jpg 추가

--- a/WebContent/css/adminlogin.css
+++ b/WebContent/css/adminlogin.css
@@ -1,16 +1,17 @@
 #logo {
-    text-align:center;
+	width: 300px;
+    margin: 100px auto;
 }
 
 #logo > img {
     width:300px;
-    margin:100px;
 }
 
 #login {
     width:400px;
-    margin:0 auto;
-    border:1px solid #ccc;
+    margin:auto;
+    border:2px solid #ccc;
+    /* background-color: #E8F0E1; */
     text-align:center;
     padding:30px;
 }
@@ -22,4 +23,9 @@
 #loginbtn {
     display:block;
     margin:20px auto;
+}
+
+#footer p{
+	color: white;
+	text-align: center;
 }
