(temp) login, logout 추가
admin/inc/header > login, logout 버튼 추가
servlet > admin/logout.java 추가
adminheader.css > #login, #logout css 추가

--- a/WebContent/css/adminheader.css
+++ b/WebContent/css/adminheader.css
@@ -10,6 +10,16 @@ header {
     margin-left:-5px;
 }
 
+
+/* header > 로그인, 로그아웃 버튼 */
+#login, #logout {
+	display: block;
+	float: right;
+}
+
+#login:focus, #logout:focus { outline: none !important; }
+
+
 /* 사이드메뉴 21.02.14 추가 */
 
 #introtitle {
