회원 정보 수정 추가, 비밀번호 변경 추가, 회원 탈퇴 추가
회원 정보 수정 추가, 비밀번호 변경 추가, 회원 탈퇴 추가

--- a/WebContent/css/adminlogin.css
+++ b/WebContent/css/adminlogin.css
@@ -9,7 +9,7 @@
 
 #login {
     width:400px;
-    margin:auto;
+    margin:20px auto;
     border:2px solid #ccc;
     /* background-color: #E8F0E1; */
     text-align:center;
