--- a/WebContent/css/withdrawal.css
+++ b/WebContent/css/withdrawal.css
@@ -2,7 +2,7 @@
 
 #box1{
 	width: 100%;
-	background-color: #ccc;
+	background-color: #E8F0E1;
 	padding: 10px;	
 }
 
@@ -17,5 +17,4 @@
 #pwtable{
 	margin-bottom: 10px;
 }
-
 
