orderlist count 구현, css 수정

--- a/WebContent/css/orderlist.css
+++ b/WebContent/css/orderlist.css
@@ -82,7 +82,7 @@ th{
 #strDate,
 #endDate
 {
-	width: 150px;
+	
 	background: #FFF;
 	display: inline-block;
 	cursor: pointer;
@@ -123,6 +123,10 @@ th{
 
 .order-state-box li:nth-child(4){
 	background-position: -350px 6px;
+}
+
+.order-state span{
+	width: 60px;
 }
 
 .total-order{
